test branch creation

--- a/views/view.ejs
+++ b/views/view.ejs
@@ -4,7 +4,7 @@
       <a href="/">Create Post</a> | 
       <a href="/manage" id="manageLink">Manage Posts</a>
     </nav>
-    <h1>All Blog Posts</h1>
+    <h1>All Blog Posts(Test Branch)</h1>
     <div class="posts-list">
         <% if(locals.title && locals.date){%>
       <div class="post-card">
